# Oncology_Trial_Assistant

./: .gitignore  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  render.yaml  turbo.json
.github/workflows/: ci.yml
apps/api/: .env.example  pyproject.toml
apps/api/data/reference/: uscs_lung_incidence.json  uscs_state_incidence.json
apps/api/scripts/: export_openapi.py  import_state_cancer_profiles.py
apps/api/src/copilot/: __init__.py  config.py  main.py
apps/api/src/copilot/api/: analyses.py  dependencies.py  errors.py  health.py  protocols.py  trials.py
apps/api/src/copilot/clients/: clinical_trials.py  groq.py  pubmed.py
apps/api/src/copilot/domain/: __init__.py  models.py
apps/api/src/copilot/persistence/: repositories.py
apps/api/src/copilot/services/: __init__.py  feasibility.py  methodology.py  protocol_parser.py  reference_data.py
apps/api/tests/: test_analyses_api.py  test_clinical_trials.py  test_feasibility_service.py  test_health.py  test_methodology.py  test_protocol_parser.py  test_pubmed.py
apps/api/tests/fixtures/: ctgov_study.json
apps/web/: .env.example  next.config.ts  package.json  tsconfig.tsbuildinfo  vitest.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: analysis-form.tsx  (+6 more)
docs/: deployment.md  methodology.md  mvp-gap-audit.md
docs/adr/: 0001-modular-monolith.md
supabase/: config.toml  seed.sql
supabase/migrations/: 20260613120000_phase1_workspace.sql  20260613150000_analysis_runs.sql
supabase/tests/: rls_policies.test.sql
tests/e2e/: workspace.spec.ts
(+18 files in other folders)
