[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "oncology-trial-copilot-api"
version = "0.1.0"
description = "FastAPI service for the Oncology Trial Feasibility Copilot"
requires-python = ">=3.13"
dependencies = [
  "fastapi==0.136.3",
  "httpx==0.28.1",
  "pydantic==2.13.4",
  "pydantic-settings==2.12.0",
  "python-jose[cryptography]==3.5.0",
  "structlog==25.5.0",
  "uvicorn[standard]==0.38.0",
]

[project.optional-dependencies]
dev = [
  "mypy==1.19.1",
  "pytest==8.4.2",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.0.0",
  "respx==0.22.0",
  "ruff==0.14.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/copilot"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
